<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AnDevCon Bootcamp App </string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="expense_tracker_application">Expense Tracker Application</string>
    <string name="item_name">Item Name:</string>
    <string name="expense_description_hint">Expense Description</string>
    <string name="item_amount">Item Amount:</string>
    <string name="expense_amount_hint">Expense Amount</string>
    <string name="enter">Enter</string>
    <string name="expense_item">Expense Item:</string>
    <string name="details_example_text">Example text : $11.11</string>
    <string name="tax_deductable">Tax Deductable?</string>
    <string name="receipt">Convert</string>
    <string name="expense_detail">Expense Detail</string>
    <string name="email_dev">Email Dev</string>
    <string name="expenses_main">Expenses Main</string>
    <string name="example">Example</string>
    <string name="share">Share</string>

</resources>