<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_item"
        android:layout_marginTop="8dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detail_expense_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_title"
        android:text="@string/details_example_text" />

    <TextView
        android:id="@+id/detail_tax_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_expense_title"
        android:layout_marginTop="8dp"
        android:text="@string/tax_deductable" />
    
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_expense_title"
        android:layout_toRightOf="@+id/detail_tax_checkbox" />

    <Button
        android:id="@+id/detail_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/detail_tax_checkbox"
        android:drawableLeft="@drawable/enter_symbol"
        android:layout_marginTop="8dp"
        android:text="@string/enter" />

    <Button
        android:id="@+id/detail_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_tax_checkbox"
        android:layout_toLeftOf="@+id/detail_enter"
        android:drawableLeft="@drawable/picture_symbol"
        android:layout_marginTop="8dp"
        android:text="@string/receipt" />

</RelativeLayout>